# CLMA

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PR.txt  README.md  phase6_plan.md  phase7_analysis.md  phase7_plan.md  python_files_scan.txt  run_webui.sh  scientific_calculator.html  test_agent_tools.py  test_bugfixes.py  test_bugfixes_api.py  test_full_pipeline.py  test_minimal.py  test_pipeline.py  test_quick.py  test_scoring.py  test_solver_output.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backup_20260501_185001/: .gitignore  CMakeLists.txt
backup_20260501_185001/config/: llm_catalog.json
backup_20260501_185001/config/experience/: entries.jsonl
backup_20260501_185001/include/core/: AgentPlugin.hpp  LoopController.hpp  Orchestrator.hpp  PluginInterface.hpp  PluginManager.hpp  PluginWatcher.hpp  RuleEngine.hpp  TokenMonitor.hpp
backup_20260501_185001/plugins/agent_evaluator/: plugin.cpp
backup_20260501_185001/plugins/agent_reasoner/: plugin.cpp
backup_20260501_185001/plugins/agent_verifier/: plugin.cpp
backup_20260501_185001/plugins/example_tool/: plugin.cpp
backup_20260501_185001/python_bindings/: CMakeLists.txt  bindings.cpp
backup_20260501_185001/python_interface/: core.py  web_app.py
backup_20260501_185001/python_interface/static/: app.js
backup_20260501_185001/python_interface/templates/: index.html  plugins.html
backup_20260501_185001/src/: main.cpp
backup_20260501_185001/src/core/: AgentPlugin.cpp  LoopController.cpp  Orchestrator.cpp  PluginWatcher.cpp  TokenMonitor.cpp
backup_20260501_185001/src/tools/: CMakeLists.txt
backup_20260501_185001/tests/: CMakeLists.txt  test_core_python.py  test_dag.cpp  test_experience_store.py  test_loop_controller.cpp  test_orchestrator.cpp  test_orchestrator_plugins.cpp  test_sandbox.cpp  test_token_monitor_edge.cpp  test_types.cpp
backup_20260504_112453/: api_providers.py  core.py  session_store.py  tool_executor.py  web_app.py
backup_20260504_112453/static/: app.js  escapement.html  style.css
backup_20260504_112453/templates/: index.html  plugins.html
config/: llm_catalog.json
config/experience/: entries.jsonl
config/rules/: default.yaml
docs/: index.html  tool-integration-arch.md
include/core/: Orchestrator.hpp  Sandbox.hpp  Types.hpp
plugins/: CMakeLists.txt
plugins/agent_refiner/: plugin.cpp
plugins/agent_solver/: plugin.cpp
python_bindings/: CMakeLists.txt  bindings.cpp
python_interface/: __init__.py  api_providers.py  core.py  experience_store.py  session_store.py  tool_executor.py  web_app.py
python_interface/static/: app.js  style.css
python_interface/templates/: index.html
scripts/: auto_update_providers.py  backup.sh
src/agents/: CMakeLists.txt
src/core/: CMakeLists.txt  Orchestrator.cpp  PluginManager.cpp  RuleEngine.cpp  Sandbox.cpp  Types.cpp
src/utils/: CMakeLists.txt
tests/: debug_plugin.cpp  test_aan.py  test_dag_planner.py  test_plugin_manager_concurrent.cpp  test_plugin_manager_recovery.cpp  test_plugin_watcher.cpp  test_rule_engine.cpp  test_sandbox_tiering.py  test_token_monitor.cpp
tools/: CMakeLists.txt  test_agent_plugins.cpp  test_plugin_system.cpp
